--- a/assets/site.css
+++ b/assets/site.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  background-image: url("lil-jetboy.jpg");
+  background-image: url("./lil-jetboy.jpg");
   background-size: cover;
   height: 100vh;
   width: 100vw;
